<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@android:color/darker_gray">

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/pict"
        android:src="@drawable/dummy_pict"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/user"
        android:layout_marginTop="6dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@+id/pict"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:maxLines="1"
        android:text="@string/user"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/pict"
        android:id="@+id/name"
        android:maxLines="1"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:text="@string/name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/pict"
        android:id="@+id/loca"
        android:maxLines="1"
        android:textSize="15sp"
        android:textColor="@android:color/white"
        android:text="@string/dummy_location"/>

</RelativeLayout>